# learn-modern-ai-python-batch-69

00-basic-concepts/: README.md
01-local-enviroment-setup/: README.md
02-google-colab/: readme.md
03-AI-Modern-Python-Programming/course1_basics_level/: Lesson_1.ipynb  Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb  Lesson_5.ipynb
03-AI-Modern-Python-Programming/course2_intermediate_level/: Lesson_1_List.ipynb  Lesson_2_Control_Flow_Constructs.ipynb  Lesson_3_Loops.ipynb  Lesson_4_List_Comprehension.ipynb  Lesson_5-Tuple.ipynb  Lesson_5_Tuples.ipynb  Lesson_6_Dictionary.ipynb  Lesson_7_Function.ipynb  Lesson_8_Decorators.ipynb  Lesson_9_Exception_Handling.ipynb
03-AI-Modern-Python-Programming/course3_advance_level/: Lesson_1_OOP.ipynb
03-AI-Modern-Python-Programming/course4_AI-Assisted-Python-Programming/: Chapter1.ipynb
03-AI-Modern-Python-Programming/course5__remaining_topics/: Agentic_AI_Python_Lesson_08_Module_&_Functions.ipynb
03-AI-Modern-Python-Programming/remaining_topics/: Agentic_AI_Python_Lesson_07_The_Set,_Frozenset_&_GC.ipynb  Agentic_AI_Python_Lesson_08_Module_&_Functions.ipynb  Agentic_AI_Python_Lesson_14_Asyncio_&_Threading.ipynb
04-github/: readme.md
05-uv/: README.md  Readme2.md
05-uv/proj1/: pyproject.toml
05-uv/project2/: pyproject.toml
05-uv/project2/src/project2/: __init__.py
06-prompt_engineering/: README.md
06-prompt_engineering/00-Basic-Meta-Prompting-Tutorial/: readme.md
06-prompt_engineering/01-Markdown-Basics/: README.md
06-prompt_engineering/01a-Markdown-Should_use_for_Prompting/: README.md
07-ui_streamlit/: readme.md
07-ui_streamlit/streamlit-tutorial/: pyproject.toml
07-ui_streamlit/streamlit-tutorial/src/streamlit_tutorial/: __init__.py  basic_elements.py  data_display.py
(+16 files in other folders)
