[project]
name = "streamlit-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sajid Khan Afridi", email = "uetianafridi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]

[project.scripts]
streamlit-tutorial = "streamlit_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
